fix top bar buttons having too much space on the right hand side

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,3 +104,9 @@ body {
 .topbar {
     margin-top: 20px;
 }
+
+/*
+.topbar input {
+    width: 90%;
+}
+*/
